--- a/index.html
+++ b/index.html
@@ -21,27 +21,33 @@
   </head>
   <body>
     <!--------- Header-------- -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
-        <a class="logo" href="./index.html">Web<span class="header__logo">Studio</span> </a>
-        <!-- ------Header Navigation------  -->
-        <nav class="navigation">
+        <a class="logo" href="./index.html"
+          >Web<span class="header__logo">Studio</span>
+        </a> -->
+    <!-- ------Header Navigation------  -->
+    <!-- <nav class="navigation">
           <ul class="navigation__list list">
             <li class="navigation__item">
-              <a class="navigation__link link navigation__link--current" href="./index.html"
+              <a
+                class="navigation__link link navigation__link--current"
+                href="./index.html"
                 >Студия</a
               >
             </li>
             <li class="navigation__item">
-              <a class="navigation__link link" href="./portfolio.html">Портфолио</a>
+              <a class="navigation__link link" href="./portfolio.html"
+                >Портфолио</a
+              >
             </li>
             <li class="navigation__item">
               <a class="navigation__link link" href="/">Контакты</a>
             </li>
           </ul>
-        </nav>
-        <!-- -------Header Contacts-------- -->
-        <ul class="auth-cont">
+        </nav> -->
+    <!-- -------Header Contacts-------- -->
+    <!-- <ul class="auth-cont">
           <li class="auth-cont__item">
             <a class="auth-cont__link link" href="info@devstudio.com">
               <svg class="auth-cont__icon" width="16" height="12">
@@ -60,45 +66,59 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-------------- hero---------- -->
     <main>
-      <section class="hero section">
+      <!-- <section class="hero section">
         <div class="container hero-container">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button data-modal-open class="button" type="button">Заказать услугу</button>
-          <!--------- Модальне вікно ----------->
-          <div data-modal class="backdrop is-hidden">
+          <button data-modal-open class="button" type="button">
+            Заказать услугу
+          </button> -->
+
+      <!--------- Модальне вікно ----------->
+      <!-- <div data-modal class="backdrop is-hidden">
             <div class="modal">
               <button class="modal-btn" data-modal-close>
                 <svg class="" width="18" height="18">
                   <use href="./img/sprite.svg#close"></use>
                 </svg>
-              </button>
-              <!-- ---------Form---------- -->
-              <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
+              </button> -->
+      <!-- ---------Form---------- -->
+      <!-- <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
               <form class="form" autocomplete="off">
                 <label class="form__field">
                   <span class="form__label">Имя</span>
-                  <input type="text" class="form__input" name="name" placeholder=" " /><svg
-                    class="form__icon"
-                    width="18px"
-                    height="18px"
-                  >
+                  <input
+                    type="text"
+                    class="form__input"
+                    name="name"
+                    placeholder=" "
+                  /><svg class="form__icon" width="18px" height="18px">
                     <use href="./img/sprite.svg#name"></use>
                   </svg>
                 </label>
 
                 <label class="form__field">
                   <span class="form__label">Телефон</span>
-                  <input type="tel" class="form__input" name="tel" placeholder=" " />
+                  <input
+                    type="tel"
+                    class="form__input"
+                    name="tel"
+                    placeholder=" "
+                  />
                   <svg class="form__icon" width="18px" height="18px">
                     <use href="./img/sprite.svg#mphone"></use>
                   </svg>
                 </label>
                 <label class="form__field">
                   <span class="form__label">Почта</span>
-                  <input type="email" class="form__input" name="email" placeholder=" " />
+                  <input
+                    type="email"
+                    class="form__input"
+                    name="email"
+                    placeholder=" "
+                  />
                   <svg class="form__icon" width="18px" height="18px">
                     <use href="./img/sprite.svg#email"></use>
                   </svg>
@@ -114,7 +134,11 @@
                 </label>
 
                 <label class="form__terms">
-                  <input class="form__terms-input hidden" type="checkbox" name="terms" />
+                  <input
+                    class="form__terms-input hidden"
+                    type="checkbox"
+                    name="terms"
+                  />
                   <span class="form__terms-checkbox"></span>
                   <span class="form__terms-text">
                     Соглашаюсь с рассылкой и принимаю
@@ -128,14 +152,18 @@
                     </a>
                   </span>
                 </label>
-                <button type="submit" class="button button__send" aria-label="Отправить">
+                <button
+                  type="submit"
+                  class="button button__send"
+                  aria-label="Отправить"
+                >
                   Отправить
                 </button>
               </form>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- -------Наши приимущества------- -->
 
@@ -152,7 +180,8 @@
               </div>
               <h3 class="prior__title">Внимание к деталям</h3>
               <p class="prior__description">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
               </p>
             </li>
             <li class="list__item">
@@ -163,7 +192,8 @@
               </div>
               <h3 class="prior__title">Пунктуальность</h3>
               <p class="prior__description">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
               </p>
             </li>
             <li class="list__item">
@@ -174,7 +204,8 @@
               </div>
               <h3 class="prior__title">Планирование</h3>
               <p class="prior__description">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
               </p>
             </li>
             <li class="list__item">
@@ -185,14 +216,15 @@
               </div>
               <h3 class="prior__title">Современные технологии</h3>
               <p class="prior__description">
-                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
               </p>
             </li>
           </ul>
         </div>
       </section>
       <!---------  Чем мы занимаемся--------->
-      <section class="works section">
+      <!-- <section class="works section">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
           <ul class="list">
@@ -216,9 +248,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- -----------Наша команда---------- -->
-      <section class="team section">
+      <!-- <section class="team section">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
           <ul class="list">
@@ -392,9 +424,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Постоянные клиенты -->
-      <section class="clients section">
+      <!-- <section class="clients section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
           <ul class="list">
@@ -442,10 +474,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- ------Footer------ -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer--flex">
         <div class="footer__contacts">
           <a class="logo logo--lower" href="/">Web<span class="footer__logo">Studio</span> </a>
@@ -462,7 +494,7 @@
           </ul>
         </div>
         <!-- -------Footer socials------ -->
-        <div class="footer__socials">
+    <!-- <div class="footer__socials">
           <p class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</p>
           <ul class="footer__socials-list list">
             <li class="footer__socials-item">
@@ -494,9 +526,9 @@
               </a>
             </li>
           </ul>
-        </div>
-        <!-- ------Footer Form------- -->
-        <div class="subs">
+        </div> -->
+    <!-- ------Footer Form------- -->
+    <!-- <div class="subs">
           <b class="subscribe">Подпишитесь на рассылку</b>
           <form class="footer__form">
             <label class="footer__email">
@@ -515,9 +547,9 @@
               </button>
             </label>
           </form>
-        </div>
-      </div>
-    </footer>
-    <script src="./js/modal.js"></script>
+        </div> -->
+    <!-- </div>
+    </footer> -->
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
