--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <!--------------- HEADER---------- -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header__container">
         <a class="logo" href="./index.html">Web<span class="header__logo">Studio</span> </a>
 
@@ -58,11 +58,11 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="portfolio section">
-        <!--скрити заголовок h1 -->
+      <!-- <section class="portfolio section">
+        
         <h1 class="hidden">Кнопки фільтру</h1>
         <div class="container">
           <ul class="btn-list">
@@ -83,7 +83,7 @@
             </li>
           </ul>
 
-          <!--скрити заголовок h2-->
+          
           <h2 class="hidden">Приклади робіт</h2>
 
           <ul class="works-list">
@@ -265,10 +265,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!-- ------Footer------ -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer--flex">
         <div class="footer__contacts">
           <a class="logo logo--lower" href="/">Web<span class="footer__logo">Studio</span> </a>
@@ -283,9 +283,9 @@
               <a class="footer__link link" href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
           </ul>
-        </div>
-        <!-- -------Footer socials------ -->
-        <div class="footer__socials">
+        </div> -->
+    <!-- -------Footer socials------ -->
+    <!-- <div class="footer__socials">
           <p class="footer__title">ПРИСОЕДИНЯЙТЕСЬ</p>
           <ul class="footer__socials-list list">
             <li class="footer__socials-item">
@@ -317,9 +317,9 @@
               </a>
             </li>
           </ul>
-        </div>
-        <!-- ------Footer Form------- -->
-        <div class="subs">
+        </div> -->
+    <!-- ------Footer Form------- -->
+    <!-- <div class="subs">
           <b class="subscribe">Подпишитесь на рассылку</b>
           <form class="footer__form">
             <label class="footer__email">
@@ -340,6 +340,6 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
